brat/test/golden/imports/non-existent2.brat.golden
Error in non-existent2@1:23-24
import lib hiding (y, a)
                      ^

  Symbol `a` not found in `lib`

